[package]
name = "spooky-edge"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
log.workspace = true
quiche.workspace = true
spooky-config = { path = "../config" }
spooky-lb = { path = "../lb" }
spooky-bridge = { path = "../bridge" }
spooky-transport = { path = "../transport" }
spooky-errors = { path = "../errors" }
bytes.workspace = true
http.workspace = true
http-body-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
tokio.workspace = true
serial_test = "3"
rand.workspace = true
smallvec.workspace = true
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
socket2.workspace = true

[dev-dependencies]
rand.workspace = true
rcgen = "0.12"
tempfile = "3"
bytes.workspace = true
http.workspace = true
http-body-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
tokio.workspace = true
